# Pocket25

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  DSD_NEO_SCANGRID_ANALYSIS.md  P25_PHASE2_AUDIO_ISSUE.md  QUICK_REFERENCE.md  README.md  SCREEN_LAYOUTS.md  pubspec.yaml
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  android_stubs.cmake  dsd_constants.c  dsd_flutter_jni.cpp
android/src/main/cpp/dsd-neo/: .vsconfig  CMakeLists.txt
android/src/main/cpp/dsd-neo/apps/dsd-cli/: CMakeLists.txt
android/src/main/cpp/dsd-neo/include/dsd-neo/core/: audio.h  opts.h
android/src/main/cpp/dsd-neo/include/dsd-neo/crypto/: pc4.h
android/src/main/cpp/dsd-neo/include/dsd-neo/io/: rtl_device.h
android/src/main/cpp/dsd-neo/include/dsd-neo/platform/: posix_compat.h
android/src/main/cpp/dsd-neo/src/core/audio/: dsd_audio.c  dsd_audio2.c
android/src/main/cpp/dsd-neo/src/crypto/: crypt-etc.c  crypt-pc4.c  crypt-rc2.c  crypt-tyt.c
android/src/main/cpp/dsd-neo/src/dsp/: dsd_symbol.c
android/src/main/cpp/dsd-neo/src/engine/: engine.c
android/src/main/cpp/dsd-neo/src/io/radio/: rtl_device.cpp  rtl_sdr_fm.cpp  rtl_stream_c.cpp
android/src/main/cpp/dsd-neo/src/platform/: CMakeLists.txt  audio_android.c  audio_stub.c  posix_compat_posix.c  threading_posix.c
android/src/main/cpp/dsd-neo/src/protocol/dmr/: dmr_bs.c  dmr_ms.c
android/src/main/cpp/dsd-neo/src/protocol/p25/: p25_trunk_sm.c
android/src/main/cpp/dsd-neo/src/protocol/p25/phase2/: p25p2_frame.c
android/src/main/cpp/dsd-neo/src/runtime/: log.cpp  unicode.cpp
android/src/main/cpp/dsd-neo/src/ui/: CMakeLists.txt  ui_async_stub.c
android/src/main/cpp/dsd-neo/src/ui/terminal/: ui_cmd_queue.c
android/src/main/cpp/librtlsdr-android/: CMakeLists.txt
android/src/main/cpp/librtlsdr-android/libusb/: CMakeLists.txt
android/src/main/cpp/stubs/: rtl-sdr-stub.h  rtl-sdr.h  sndfile.h
android/src/main/kotlin/com/example/dsd_flutter/: DsdFlutterPlugin.kt
android/src/test/kotlin/com/example/dsd_flutter/: DsdFlutterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dsd_flutter_example/: MainActivity.kt
example/android/app/src/main/res/xml/: usb_device_filter.xml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/lib/models/: conventional_bank.dart  conventional_channel.dart  scanner_activity.dart  site_details.dart
example/lib/screens/: advanced_scan_screen.dart  channel_editor_screen.dart  conventional_channels_screen.dart  import_manage_screen.dart  import_settings_screen.dart  log_screen.dart  manual_configuration_screen.dart  network_screen.dart  quick_scan_screen.dart  radio_reference_import_screen.dart  scan_grid_screen.dart  scanner_screen.dart  sdr_settings_screen.dart  settings_screen.dart  site_details_screen.dart  site_selection_screen.dart  system_selection_screen.dart  web_programmer_screen.dart
example/lib/services/: database_service.dart  native_hackrf_service.dart  native_rtlsdr_service.dart  radio_reference_service.dart  rtl_tcp_service.dart  scanning_service.dart  settings_service.dart  update_service.dart  web_programmer_service.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/scripts/: README.md  build_release.sh  bump_version.sh
example/test/: widget_test.dart
lib/: dsd_flutter.dart  dsd_flutter_method_channel.dart  dsd_flutter_platform_interface.dart
linux/: CMakeLists.txt  dsd_flutter_plugin.cc  dsd_flutter_plugin_private.h
linux/include/dsd_flutter/: dsd_flutter_plugin.h
linux/test/: dsd_flutter_plugin_test.cc
test/: dsd_flutter_method_channel_test.dart  dsd_flutter_test.dart
